Update Automate API Extraction + Appending Data + Extra -- Project.ipynb

--- a/Automate API Extraction + Appending Data + Extra -- Project.ipynb
+++ b/Automate API Extraction + Appending Data + Extra -- Project.ipynb
@@ -20,7 +20,7 @@
     "}\n",
     "headers = {\n",
     "  'Accepts': 'application/json',\n",
-    "  'X-CMC_PRO_API_KEY': '0ad53085-1cb2-4eb8-ad9e-3ffbd7e56509',\n",
+    "  'X-CMC_PRO_API_KEY': 'YOUR_API_KEY',\n",
     "}\n",
     "\n",
     "session = Session()\n",
@@ -33,11 +33,6 @@
     "except (ConnectionError, Timeout, TooManyRedirects) as e:\n",
     "  print(e)\n",
     "\n",
-    "#NOTE:\n",
-    "# I had to go in and put \"jupyter notebook --NotebookApp.iopub_data_rate_limit=1e10\"\n",
-    "# Into the Anaconda Prompt to change this to allow to pull data\n",
-    "\n",
-    "# If that didn't work try using the local host URL as shown in the video"
    ]
   },
   {
@@ -60,7 +55,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "#This allows you to see all the columns, not just like 15\n",
+    "#See all columns in scrollable form/n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', None)"
    ]
@@ -98,7 +93,7 @@
     "    }\n",
     "    headers = {\n",
     "      'Accepts': 'application/json',\n",
-    "      'X-CMC_PRO_API_KEY': '0ad53085-1cb2-4eb8-ad9e-3ffbd7e56509',\n",
+    "      'X-CMC_PRO_API_KEY': 'YOUR_API_KEY',\n",
     "    }\n",
     "\n",
     "    session = Session()\n",
@@ -126,14 +121,13 @@
     "    #df['timestamp'] = pd.to_datetime('now')\n",
     "    #df\n",
     "\n",
-    "    #if not os.path.isfile(r'C:\\Users\\alexf\\OneDrive\\Documents\\Python Scripts\\API.csv'):\n",
-    "        #df.to_csv(r'C:\\Users\\alexf\\OneDrive\\Documents\\Python Scripts\\API.csv', header='column_names')\n",
+    "    #if not os.path.isfile(r'YOUR_FILE_PATH'):\n",
+    "        #df.to_csv(r'YOUR_FILE_PATH header='column_names')\n",
     "    #else:\n",
-    "        #df.to_csv(r'C:\\Users\\alexf\\OneDrive\\Documents\\Python Scripts\\API.csv', mode='a', header=False)\n",
+    "        #df.to_csv(r'YOUR_FILE_PATH', mode='a', header=False)\n",
     "        \n",
-    "    #Then to read in the file: df = pd.read_csv(r'C:\\Users\\alexf\\OneDrive\\Documents\\Python Scripts\\API.csv')\n",
+    "    #Then to read in the file: df = pd.read_csv(r'YOUR_FILE_PATH')\n",
     "\n",
-    "# If that didn't work try using the local host URL as shown in the video"
    ]
   },
   {
@@ -161,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df72 = pd.read_csv(r'C:\\Users\\alexf\\OneDrive\\Documents\\Python Scripts\\API.csv')\n",
+    "df72 = pd.read_csv(r'YOUR_FILE_PATH')\n",
     "df72"
    ]
   },
@@ -182,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One thing I noticed was the scientific notation. I like it, but I want to be able to see the numbers in this case\n",
+    "#To be able to see the numbers in this case\n",
     "\n",
     "pd.set_option('display.float_format', lambda x: '%.5f' % x)"
    ]
@@ -204,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now let's look at the coin trends over time\n",
+    "# looking at the coin trends over time\n",
     "\n",
     "df3 = df.groupby('name', sort=False)[['quote.USD.percent_change_1h','quote.USD.percent_change_24h','quote.USD.percent_change_7d','quote.USD.percent_change_30d','quote.USD.percent_change_60d','quote.USD.percent_change_90d']].mean()\n",
     "df3"
@@ -259,8 +253,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Because of how it's structured above we need to set an index. I don't want to pass a column as an index for this dataframe\n",
-    "#So I'm going to create a range and pass that as the dataframe. You can make this more dynamic, but I'm just going to hard code it\n",
+    "#Because of how it's structured above we need to set an index\n",
+    "#creating a range and pass that as the dataframe\n",
     "\n",
     "\n",
     "index = pd.Index(range(90))\n",
@@ -325,8 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now to do something much simpler\n",
-    "# we are going to create a dataframe with the columns we want\n",
+    "# create a dataframe with the columns we want\n",
     "\n",
     "df10 = df[['name','quote.USD.price','timestamp']]\n",
     "df10 = df10.query(\"name == 'Bitcoin'\")\n",
