Update Automate API Extraction + Appending Data + Extra -- Project.ipynb
formatting json

--- a/Automate API Extraction + Appending Data + Extra -- Project.ipynb
+++ b/Automate API Extraction + Appending Data + Extra -- Project.ipynb
@@ -31,8 +31,7 @@
     "  data = json.loads(response.text)\n",
     "  #print(data)\n",
     "except (ConnectionError, Timeout, TooManyRedirects) as e:\n",
-    "  print(e)\n",
-    "\n",
+    "  print(e)\n"
    ]
   },
   {
@@ -127,7 +126,7 @@
     "        #df.to_csv(r'YOUR_FILE_PATH', mode='a', header=False)\n",
     "        \n",
     "    #Then to read in the file: df = pd.read_csv(r'YOUR_FILE_PATH')\n",
-    "\n",
+    "\n"
    ]
   },
   {
